[project]
name = "isi-markets"
version = "0.1.0"
description = "ISI Markets domain QA system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "google-generativeai>=0.7.2",
    "chromadb>=1.2.0",
    "orjson>=3.10.7",
    "python-dotenv>=1.0.1",
    "unstructured>=0.18.15",
    "unstructured-inference>=1.0.5",
    "pdf2image>=1.17.0",
    "Pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "PyPDF2>=3.0.1",
    "tenacity>=9.0.0",
    "numpy>=1.26.4",
    "google-genai>=1.45.0",
    "pi-heif>=1.1.1",
    "unstructured-pytesseract>=0.3.15",
    "sentence-transformers>=5.1.1",
    "ruff>=0.14.1",
    "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
